load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        "//proto/v1:cookie_proto",
        "//proto/v1:grpc_proto",
        "//proto/v1:http_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/config_go_proto",
    proto = ":config_proto",
    deps = [
        "//proto/v1:cookie_go_proto",
        "//proto/v1:grpc_go_proto",
        "//proto/v1:http_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

proto_library(
    name = "request_proto",
    srcs = ["request.proto"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "request_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/request_go_proto",
    proto = ":request_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = [
        ":request_proto",
        "@go_googleapis//google/api:annotations_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/service_go_proto",
    proto = ":service_proto",
    deps = [
        ":request_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)
