load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        "//proto/v1:cookie_proto",
        "//proto/v1:grpc_proto",
        "//proto/v1:http_proto",
        "@googleapis//google/api:field_behavior_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/configpb",
    proto = ":config_proto",
    deps = [
        "//proto/v1:cookie_go_proto",
        "//proto/v1:grpc_go_proto",
        "//proto/v1:http_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

proto_library(
    name = "request_proto",
    srcs = ["request.proto"],
    deps = ["@googleapis//google/api:field_behavior_proto"],
)

go_proto_library(
    name = "request_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/requestpb",
    proto = ":request_proto",
    deps = ["@org_golang_google_genproto_googleapis_api//annotations"],
)

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = [
        ":request_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/servicepb",
    proto = ":service_proto",
    deps = [
        ":request_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_genproto_googleapis_rpc//status",
    ],
)
