load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//cookie-server:__subpackages__"])

go_library(
    name = "cookie",
    srcs = ["cookie.go"],
    importpath = "github.com/hazaelsan/ssh-relay/cookie-server/request/cookie",
    deps = [
        "//cookie-server/proto/v1:request_go_proto",
        "//request",
    ],
)

go_test(
    name = "cookie_test",
    srcs = ["cookie_test.go"],
    embed = [":cookie"],
    deps = [
        "//cookie-server/proto/v1:request_go_proto",
        "@com_github_kylelemons_pretty//:pretty",
    ],
)
