load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        "//proto/v1:http_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/helper/proto/v1/config_go_proto",
    proto = ":config_proto",
    deps = [
        "//proto/v1:http_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)
