load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        "//proto/v1:http_proto",
        "@googleapis//google/api:field_behavior_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/hazaelsan/ssh-relay/helper/proto/v1/configpb",
    proto = ":config_proto",
    deps = [
        "//proto/v1:http_go_proto",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)
