load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//helper:__subpackages__"])

go_library(
    name = "corprelay",
    srcs = ["corprelay.go"],
    importpath = "github.com/hazaelsan/ssh-relay/helper/session/corprelay",
    deps = [
        "//helper/session",
        "//http",
        "//proto/v1:tls_go_proto",
        "//session",
        "//session/corprelay",
        "//tls",
        "@com_github_golang_glog//:glog",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
