load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//helper:__subpackages__"])

go_library(
    name = "corprelayv4",
    srcs = ["corprelayv4.go"],
    importpath = "github.com/hazaelsan/ssh-relay/helper/session/corprelayv4",
    deps = [
        "//helper/session",
        "//session",
        "//session/corprelayv4",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_hazaelsan_go_tls//:tls",
    ],
)
